countdown timer added

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,6 +1,137 @@
 @import url('https://fonts.googleapis.com/css2?family=Abel&family=Barlow+Condensed&family=Cedarville+Cursive&family=Comfortaa:wght@600&family=Comic+Neue:wght@5;400&family=Courgette&family=Grape+Nuts&family=Lemonada:wght@400;600&family=Lobster&family=Montserrat:wght@600&family=Overlock:ital,wght@0,400;1,900&family=Paprika&family=Permanent+Marker&family=Secular+One&family=Staatliches&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abel&family=Barlow+Condensed&family=Cedarville+Cursive&family=Comfortaa:wght@600&family=Comic+Neue:wght@300;400&family=Courgette&family=Grape+Nuts&family=Lemonada:wght@400;600&family=Lobster&family=Montserrat:wght@600&family=Overlock:ital,wght@0,400;1,900&family=Paprika&family=Permanent+Marker&family=Poppins&family=Secular+One&display=swap');
 
+
+@import url('https://fonts.googleapis.com/css?family=Exo:400,700');
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+body{
+    font-family: 'Exo', sans-serif;
+}
+
+#ABOUT{
+    background: rgba(0,102,153,0.7);
+    /* background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);   */
+    width: 1540px; 
+    height: 100vh;
+}
+
+.circles{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.circles li{
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    background: rgba(255, 255, 255, 0.2);
+    animation: animate 25s linear infinite;
+    bottom: -150px;
+    
+}
+
+.circles li:nth-child(1){
+    left: 25%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 0s;
+}
+
+
+.circles li:nth-child(2){
+    left: 10%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 2s;
+    animation-duration: 12s;
+}
+
+.circles li:nth-child(3){
+    left: 70%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 4s;
+}
+
+.circles li:nth-child(4){
+    left: 40%;
+    width: 60px;
+    height: 60px;
+    animation-delay: 0s;
+    animation-duration: 18s;
+}
+
+.circles li:nth-child(5){
+    left: 65%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 0s;
+}
+
+.circles li:nth-child(6){
+    left: 75%;
+    width: 110px;
+    height: 110px;
+    animation-delay: 3s;
+}
+
+.circles li:nth-child(7){
+    left: 35%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 7s;
+}
+
+.circles li:nth-child(8){
+    left: 50%;
+    width: 25px;
+    height: 25px;
+    animation-delay: 15s;
+    animation-duration: 45s;
+}
+
+.circles li:nth-child(9){
+    left: 20%;
+    width: 15px;
+    height: 15px;
+    animation-delay: 2s;
+    animation-duration: 35s;
+}
+
+.circles li:nth-child(10){
+    left: 85%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 0s;
+    animation-duration: 11s;
+}
+
+@keyframes animate {
+
+    0%{
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+        border-radius: 0;
+    }
+
+    100%{
+        transform: translateY(-1000px) rotate(720deg);
+        opacity: 0;
+        border-radius: 50%;
+    }
+
+}
 body{
     scroll-behavior: smooth;
     margin: 0;
@@ -25,29 +156,31 @@ body{
 #nav {
   background: white;
   color: rgb(13, 26, 38);
+  /* box-shadow: none; */
   position: fixed;
-  top: 0;
-  height: 60px;
-  line-height: 60px;
+  height: 75px;
+  line-height: 20px;
   width: 100%;
-  z-index: 10;
-  display: inline-block;
+  z-index: 10; 
+  padding-right: 120px;
+  /* display: inline-block;
   float: right;
   list-style: none;
   margin-top: -2px;
   text-align: right;
   transition: transform 0.5s ease-out;
-  -webkit-transition: transform 0.5s ease-out;
+  -webkit-transition: transform 0.5s ease-out; */
 }
-
-.css-130f8nx{
+canvas {
+    background: #232323;
+  }
+/* .css-130f8nx{
   display: inline-block;
-}
+} */
 .css-130f8nx a {
-  color: rgb(13, 26, 38);
-    /* display: block; */
-    font-size: 0.7em;
-    height: 50px;
+   color: rgb(13, 26, 38);
+    font-size: 15px;
+    /* height: 50px; */
     letter-spacing: 1px;
     margin: 0 20px;
     padding: 0 4px;
@@ -56,6 +189,7 @@ body{
     text-transform: uppercase;
     transition: all 0.5s ease;
     -webkit-transition: all 0.5s ease;
+    font-family: 'Oswald', sans-serif
 }
 path{
     color: white;
