--- a/src/components/navbar/about.css
+++ b/src/components/navbar/about.css
@@ -1,13 +1,39 @@
 .main_head{
-    padding: 100px;
+    padding-top: 100px;
+    padding-left: 50px;
+    padding-right: 100px;
+    /* background-color: aliceblue; */
 }
 
 .main_head h3{
-    color:silver;
+    /* color:silver; */
+    color: rgb(204,214,246);
     font-size: 20px;
     letter-spacing: 1px;
     margin-bottom: 20px;
+    white-space:nowrap;
+    overflow:hidden;
 }
+
+.main_head h3 {
+    width: 52ch;
+    animation: typing 2s steps(22), blink .5s step-end infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid;
+  }
+  
+  @keyframes typing {
+    from {
+      width: 0
+    }
+  }
+      
+  @keyframes blink {
+    50% {
+      border-color: transparent
+    }
+  }
 
 .main_head h1{
     font-size: 35px;
@@ -21,7 +47,7 @@
 }
 
 .register{
-    padding-left: 100px;
+    padding-left: 50px;
     font-size: 25px;
     cursor: pointer !important;
     display: flex;
@@ -31,7 +57,8 @@
     color: black;
     padding: 20px;
     letter-spacing: 2px;
-    background-color: silver;
+    /* background-color: silver; */
+    background-color: rgb(89,227,197);
     border: none;
     font-size: 15px;
     border-radius: 2px;
@@ -43,9 +70,21 @@
     color: black;
     padding: 20px;
     letter-spacing: 2px;
-    background-color: silver;
+    /* background-color: silver; */
+    background-color: rgb(89,227,197);
     border: none;
     font-size: 15px;
     border-radius: 2px;
     width: 17%;
+}
+
+.content1{
+  display: flex;
+  flex-direction: row;
+  
+}
+
+.image{
+  margin: auto 0;
+  margin-top: 130px;
 }
