--- a/src/components/navbar/about.css
+++ b/src/components/navbar/about.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Raleway:wght@200&display=swap');
+
 .main_head{
     padding-top: 100px;
     padding-left: 50px;
-    padding-right: 100px;
+    /* padding-right: 100px; */
     /* background-color: aliceblue; */
 }
 
@@ -13,10 +15,11 @@
     margin-bottom: 20px;
     white-space:nowrap;
     overflow:hidden;
+    font-family:"Raleway"
 }
 
 .main_head h3 {
-    width: 52ch;
+    width: 46ch;
     animation: typing 2s steps(22), blink .5s step-end infinite alternate;
     white-space: nowrap;
     overflow: hidden;
@@ -36,55 +39,150 @@
   }
 
 .main_head h1{
-    font-size: 35px;
-    color: white;
-    letter-spacing: 2.4px;
+    font-size: 42px;
+    color: rgb(89,227,197);
+    letter-spacing: 3px;
+    margin-bottom: 20px;
 }
 
 .main_head h4{
-    font-size: 25px;
-    color: white;
+    font-size: 23px;
+    color: rgb(204,214,246);
+    letter-spacing: 1px;
+    text-transform: capitalize !important;
+    font-family: "Raleway";
 }
 
-.register{
-    padding-left: 50px;
-    font-size: 25px;
-    cursor: pointer !important;
-    display: flex;
-    flex-direction: row;
-}
-.click{
-    color: black;
-    padding: 20px;
-    letter-spacing: 2px;
-    /* background-color: silver; */
-    background-color: rgb(89,227,197);
-    border: none;
-    font-size: 15px;
-    border-radius: 2px;
-    width: 17%;
-    margin-right: 20px;
-}
-
-.rules{
-    color: black;
-    padding: 20px;
-    letter-spacing: 2px;
-    /* background-color: silver; */
-    background-color: rgb(89,227,197);
-    border: none;
-    font-size: 15px;
-    border-radius: 2px;
-    width: 17%;
-}
 
 .content1{
   display: flex;
   flex-direction: row;
-  
 }
 
 .image{
   margin: auto 0;
   margin-top: 130px;
+  margin-left: 70px;
+}
+
+.clockflex{
+  display: flex;
+  flex-direction: column;
+}
+.register{
+  padding-left: 50px;
+  font-size: 25px;
+  display: flex;
+  flex-direction: row;
+  margin-top: 30px;
+}
+.click{
+  color: rgb(58,54,55);
+  padding: 20px;
+  letter-spacing: 1px;
+  background-color: rgb(89,227,197);
+  border: none;
+  font-size: 15px;
+  border-radius: 2px;
+  width: 17%;
+  margin-right: 50px;
+  cursor:pointer;
+  font-weight: 500;
+}
+
+.rules{
+  color: rgb(58,54,55);
+  padding: 20px;
+  letter-spacing: 1px;
+  background-color: rgb(89,227,197);
+  border: none;
+  font-size: 15px;
+  border-radius: 2px;
+  /* font-family: "Raleway"; */
+  width: 17%;
+  font-weight: 500;
+}
+
+.custom-btn {
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  outline: none;
+  color: rgb(58,54,55);
+  padding: 20px;
+  letter-spacing: 1px;
+  border: none;
+  font-size: 15px;
+  border-radius: 2px;
+  width: 17%;
+  margin-right: 50px;
+  cursor:pointer;
+  font-weight: 500;
+}
+.btn-3 {
+  background-color: rgb(89,227,197);
+  line-height: 55px;
+  padding: 0;
+  border: none;
+  
+}
+.btn-3 span {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.btn-3:before,
+.btn-3:after {
+  position: absolute;
+  content: "";
+  right: 0;
+  top: 0;
+   background:  rgb(204,214,246);
+  transition: all 0.3s ease;
+}
+.btn-3:before {
+  height: 0%;
+  width: 2px;
+}
+.btn-3:after {
+  width: 0%;
+  height: 2px;
+}
+.btn-3:hover{
+   background: transparent;
+  box-shadow: none;
+}
+.btn-3:hover:before {
+  height: 100%;
+}
+.btn-3:hover:after {
+  width: 100%;
+}
+.btn-3 span:hover{
+  color: rgb(204,214,246);
+}
+.btn-3 span:before,
+.btn-3 span:after {
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: 0;
+  background-color: rgb(204,214,246);
+  transition: all 0.3s ease;
+}
+.btn-3 span:before {
+  width: 2px;
+  height: 0%;
+}
+.btn-3 span:after {
+  width: 0%;
+  height: 2px;
+}
+.btn-3 span:hover:before {
+  height: 100%;
+}
+.btn-3 span:hover:after {
+  width: 100%;
 }
