--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -31,16 +31,16 @@
     margin-top: -10px;
 
 }
-
+/* 
 .circles{
-    /* position:fixed; */
+    position:fixed;
     top: 0;
     left: 0;
     width: 100%;
-    /* height: 100%; */
+    height: 100%;
     overflow: hidden !important;
-    /* margin-bottom: -200px; */
-}
+    margin-bottom: -200px;
+} */
 
 .circles li{
     position: absolute;
@@ -50,7 +50,7 @@
     height: 20px;
     background: rgba(255, 255, 255, 0.2);
     animation: animate 25s linear infinite;
-    bottom: -20px;
+    /* bottom: -60px; */
     
 }
 
@@ -68,14 +68,17 @@
     height: 20px;
     animation-delay: 0s;
     animation-duration: 12s;
+    top: 200px;
 }
+
 
 .circles li:nth-child(3){
     left: 70%;
     width: 20px;
     height: 20px;
-    animation-delay: 0s;
-}
+    animation-delay: 4s;
+    top: 400px;
+} 
 
 .circles li:nth-child(4){
     left: 40%;
@@ -90,6 +93,7 @@
     width: 20px;
     height: 20px;
     animation-delay: 0s;
+    top: 300px;
 }
 
 .circles li:nth-child(6){
@@ -97,17 +101,19 @@
     width: 110px;
     height: 110px;
     animation-delay: 0s;
+    top: 300px;
 }
 
 .circles li:nth-child(7){
-    left: 35%;
+    left: 50%;
     width: 150px;
     height: 150px;
     animation-delay: 0s;
+    top: 200px;
 }
 
 .circles li:nth-child(8){
-    left: 50%;
+    left: 45%;
     width: 25px;
     height: 25px;
     animation-delay: 0s;
@@ -118,30 +124,32 @@
     left: 20%;
     width: 15px;
     height: 15px;
-    animation-delay: 0s;
+    animation-delay: 2s;
     animation-duration: 35s;
 }
 
 .circles li:nth-child(10){
-    left: 85%;
+    left: 10%;
     width: 150px;
     height: 150px;
     animation-delay: 0s;
     animation-duration: 11s;
-}
+} 
+
+
 
 @keyframes animate {
 
     0%{
         transform: translateY(0) rotate(0deg);
-        opacity: 1;
-        border-radius: 0;
+        opacity: 0.7;
+        border-radius: 30%;
     }
 
     100%{
         transform: translateY(-1000px) rotate(720deg);
         opacity: 0;
-        border-radius: 50%;
+        border-radius: 30%;
     }
 
 }
