--- a/src/components/page/landing.css
+++ b/src/components/page/landing.css
@@ -5,11 +5,11 @@
 
 .ch .css-130f8nx a {
     /* color: rgb(10,25,47);; */
-    color: aliceblue;
+    color: rgb(58,54,55);
 }
 .ch path {
     /* color:rgb(10,25,47); */
-    color: aliceblue;
+    color: rgb(58,54,55);
 }
 body{
     overflow-x: hidden;
