--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -9,9 +9,15 @@
     padding: 0px;
 }
 
+body{
+    scroll-behavior: smooth;
+    margin: 0;
+    background-color: rgb(10,25,47); 
+    height: 3000px;
+}
 
 #HOME{
-    background-color: rgb(10,25,47); 
+    /* background-color: rgb(10,25,47);  */
      width: 1540px; 
     height: 150vh; 
      /* margin-top: -10px;  */
@@ -26,8 +32,8 @@
 
 #ABOUT{
     background-color: rgb(10,25,47);
-    width: 1540px; 
-    height: 1000vh;
+    /* width: 1540px;  */
+    /* height: 1000vh; */
     margin-top: -10px;
 
 }
@@ -59,16 +65,17 @@
     width: 80px;
     height: 80px;
     animation-delay: 0s;
+    top:300px;
 }
 
 
 .circles li:nth-child(2){
     left: 10%;
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     animation-delay: 0s;
-    animation-duration: 12s;
-    top: 200px;
+    animation-duration: 60s;
+    top: 100px;
 }
 
 
@@ -81,11 +88,12 @@
 } 
 
 .circles li:nth-child(4){
-    left: 40%;
+    left: 60%;
     width: 60px;
     height: 60px;
     animation-delay: 0s;
-    animation-duration: 18s;
+    animation-duration: 30s;
+    top: 600px;
 }
 
 .circles li:nth-child(5){
@@ -101,6 +109,7 @@
     width: 110px;
     height: 110px;
     animation-delay: 0s;
+    animation-duration: 40s;
     top: 300px;
 }
 
@@ -114,18 +123,19 @@
 
 .circles li:nth-child(8){
     left: 45%;
-    width: 25px;
-    height: 25px;
+    width: 50px;
+    height: 50px;
     animation-delay: 0s;
     animation-duration: 45s;
 }
 
 .circles li:nth-child(9){
-    left: 20%;
-    width: 15px;
-    height: 15px;
-    animation-delay: 2s;
-    animation-duration: 35s;
+    left: 35%;
+    width: 40px;
+    height: 40px;
+    animation-delay: 0s;
+    animation-duration: 60s;
+    top: 250px;
 }
 
 .circles li:nth-child(10){
@@ -133,7 +143,8 @@
     width: 150px;
     height: 150px;
     animation-delay: 0s;
-    animation-duration: 11s;
+    animation-duration: 45s;
+
 } 
 
 
@@ -142,7 +153,7 @@
 
     0%{
         transform: translateY(0) rotate(0deg);
-        opacity: 0.7;
+        opacity: 0.4;
         border-radius: 30%;
     }
 
@@ -152,10 +163,6 @@
         border-radius: 30%;
     }
 
-}
-body{
-    scroll-behavior: smooth;
-    margin: 0;
 }
 
 ::-webkit-scrollbar {
@@ -220,7 +227,7 @@ path{
   width: 0%;
   height: 1px;
   bottom: -1px;
-  background:rgb(204,214,246);
+  background:rgb(58,54,55);
 }
 
 #nav .css-130f8nx a:before {
@@ -229,12 +236,12 @@ path{
 }
 
 #nav .css-130f8nx a:after {
-  color: rgb(204,214,246);
+  color: rgb(58,54,55);
   right: 0;
   /* transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1); */
 }
 #nav .css-130f8nx a:hover:before {
-  background: rgb(204,214,246);
+  background: rgb(58,54,55);;
   width: 100%;
   transition: width 0.5s cubic-bezier((0.22, 0.61, 0.36, 1));
 }
