--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -13,7 +13,7 @@ body{
     scroll-behavior: smooth;
     margin: 0;
     background-color: rgb(10,25,47); 
-    height: 3000px;
+    /* height: 2900px; */
 }
 
 #HOME{
