--- a/src/components/event/events.css
+++ b/src/components/event/events.css
@@ -105,3 +105,18 @@
   article.card:hover .infos .seats, article.card:hover .infos .txt, article.card:hover .infos .details {
     opacity: 1;
   }
+
+@media screen and (min-width:300px) and (max-width:500px){
+  .events{
+    display: block;
+    width: 80%;
+    margin-right: 10%;
+    margin-left: -10%;
+  }
+  .card{
+    margin-bottom: 20px;
+  }
+  #card2{
+    margin-top:-50px;
+  }
+}
