--- a/src/components/event/events.css
+++ b/src/components/event/events.css
@@ -8,7 +8,8 @@
 .events{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    /* justify-content: center; */
+    justify-content: space-around;
     margin-top: 80px;
 }
 .card{
@@ -16,8 +17,8 @@
   padding-left: 70px;
 }
   article.card {
-    width: 300px;
-    height: 380px;
+    width: 250px;
+    height: 300px;
     /* transform: translate(-50%, -50%) translateZ(0); */
     border-radius: 3px;
     /* box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3); */
@@ -25,7 +26,7 @@
   }
   article.card .thumb {
     width: auto;
-    height: 300px;
+    height: 250px;
     background: url("./event1.jpeg") no-repeat center;
     background-size: cover;
     border-radius: 3px;
@@ -39,44 +40,42 @@
     background: rgb(204,214,246);;
     transition: 0.4s 0.15s cubic-bezier(0.17, 0.67, 0.5, 1.03);
   }
-  article.card .infos .title {
+.title {
     position: relative;
-    margin: 10px 0;
-    letter-spacing: 3px;
+    letter-spacing: 2px;
+    margin-bottom: 5px;
+    margin-top: -5px;
     color: #152536;
-    font-family: "Grotesque Black", sans-serif;
-    font-size: 1rem;
+    /* font-family: "Raleway"; */
+    font-size: 15px;
     text-transform: uppercase;
-    text-shadow: 0 0 0px #32577f;
+    /* text-shadow: 0 0 0px #32577f; */
+    text-align: center;
   }
-  article.card .infos .flag {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
-    width: 35px;
-    height: 23px;
-    background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/397014/flag.png") no-repeat top right;
-    background-size: 100% auto;
-    display: inline-block;
+
+.date{
+  font-size: 12px;
+  text-align: center;
+  margin-top: -4px;
+
   }
-  article.card .infos .date, article.card .infos .seats {
+  /* article.card .infos .date, article.card .infos .seats {
     margin-bottom: 10px;
     text-transform: uppercase;
-    font-size: 0.85rem;
+    font-size: 10px;
     color: rgba(21, 37, 54, 0.7);
     font-family: "Grotesque", sans-serif;
-  }
-  article.card .infos .seats {
+  } */
+  /* article.card .infos .seats {
     display: inline-block;
     margin-bottom: 24px;
     padding-bottom: 24px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     opacity: 0;
     transition: 0.5s 0.25s cubic-bezier(0.17, 0.67, 0.5, 1.03);
-  }
+  } */
   article.card .infos .txt {
-    font-family: "Merriweather", sans-serif;
+    /* font-family: "Merriweather", sans-serif; */
     line-height: 2;
     font-size: 0.95rem;
     color: rgba(21, 37, 54, 0.7);
