--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -7,7 +7,7 @@
   background-color: rgb(10,25,47); 
    /* width: 1540px; 
   height: 150vh;  */
-   margin-top: -10px; 
+   margin-top: 50px; 
    overflow: hidden;
 }
 .about-border {
@@ -15,7 +15,7 @@
   width: 60px;
   height: 3px;
   background: rgb(204,214,246);
-  margin: 3px auto
+  margin: 0 auto
 }
 
 .info{
@@ -29,7 +29,7 @@
 .ieee{
   display: flex;
   flex-direction: row;
-  padding: 40px;
+  padding: 40px 60px;
 }
 .ieeetext{
   width: 65%;
@@ -50,7 +50,7 @@
 .rsc{
   display: flex;
   flex-direction: row;
-  padding: 40px;
+  padding: 40px 60px;
 }
 .rsctext{
   width: 65%;
@@ -68,7 +68,7 @@
 .must{
   display: flex;
   flex-direction: row;
-  padding: 40px;
+  padding: 40px 60px;
 }
 
 
@@ -84,7 +84,8 @@
 }
 
 .must_im{
-  margin-top: -25px;
+  /* margin-top: -25px; */
+  
 }
 
 .reveal {
@@ -148,7 +149,7 @@
   left: 10%;
   width: 20px;
   height: 20px;
-  animation-delay: 2s;
+  animation-delay: 0s;
   animation-duration: 12s;
 }
 
@@ -156,7 +157,7 @@
   left: 70%;
   width: 20px;
   height: 20px;
-  animation-delay: 4s;
+  animation-delay: 2s;
 }
 
 .circles_about li:nth-child(4){
@@ -178,21 +179,21 @@
   left: 75%;
   width: 110px;
   height: 110px;
-  animation-delay: 3s;
+  animation-delay: 1s;
 }
 
 .circles_about li:nth-child(7){
   left: 35%;
   width: 150px;
   height: 150px;
-  animation-delay: 7s;
+  animation-delay: 3s;
 }
 
 .circles_about li:nth-child(8){
   left: 50%;
   width: 25px;
   height: 25px;
-  animation-delay: 15s;
+  animation-delay: 4s;
   animation-duration: 45s;
 }
 
@@ -229,7 +230,7 @@
 .infomobile{
   display: none;
 }
-@media screen  and (min-width:300px) and (max-width:500px) {
+@media screen  and (min-width:0px) and (max-width:600px) {
   #ABOUT{
     overflow: visible;
   }
@@ -242,6 +243,10 @@
   #one,#two,#three{
     display: block;
     /* height: 200px; */
+    margin-top: -20px;
+  }
+  #one{
+    margin-top: 20px;
   }
   .aboutimg{
     display: block;
@@ -252,12 +257,51 @@
     margin-top:-10px;
   }
   .abttext{
-    width:90%;
+    width:100%;
     display: block;
     margin-right: auto;
     margin-left: auto;
     text-align: center;
     color: rgb(118,130,158);;
   }
+  .text_res{
+    font-size: 88%;
+  }
+
+}
+@media screen  and (min-width:600px) and (max-width:1080px) {
+  #ABOUT{
+    overflow: visible;
+  }
+  .info{
+    display: none;
+  }
+  .infomobile{
+    display: block;
+  }
+  #one,#two,#three{
+    display: flex;
+    flex-direction: row;
+    margin-top: -20px;
+  }
+  #one{
+    margin-top: 20px;
+  }
+  .aboutimg{
+    width:60%;
+    margin-top:-10px;
+  }
+  .abttext{
+    width:100%;
+    /* display: block;
+    margin-right: auto;
+    margin-left: auto; */
+    text-align: center;
+    color: rgb(118,130,158);;
+  }
+  .text_res{
+    font-size: 95%;
+  }
+
 }
 
