--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -109,34 +109,6 @@ ul {
   margin-top: -45px;
   padding: 5px;
 }
-@media screen and (min-width:300px) and (max-width:500px) {
-  .footer{
-    display: block;
-    padding: 40px;
-    padding-bottom: 0;
-    text-align: center;
-  }
-  .footer-widget-heading2,.footer-widget-heading{
-    display: none;
-  }
-  .contactandlinks .footer-widget-heading2,.contactandlinks .footer-widget-heading{
-    display: block;
-    text-align: left;
-  }
-  .contactandlinks .footer-widget-heading2{
-    width:55%;
-  }
-  .contactandlinks .footer-widget-heading{
-    width: 40%;
-    margin-right: 10%;
-  }
-  #usefullinks,#contactlinks{
-    text-align: center;
-  }
-  .contactandlinks{
-    display: flex;
-  }
-}
 
 .subscribe-form {
   position: relative;
@@ -164,3 +136,122 @@ ul {
   transform: rotate(-6deg);
   width: 3px;
 }
+@media screen and (min-width:0px) and (max-width:600px) {
+  .footer{
+    display: block;
+    padding: 35px;
+    padding-bottom: 0;
+    text-align: center;
+  }
+  .footer-text{
+    font-size: 75% !important;
+    font-weight: 700;
+  }
+  .footer-social-icon span{
+    font-size: 100%;
+  }
+  .footer-widget-heading2,.footer-widget-heading{
+    display: none;
+  }
+  .contactandlinks ul{
+    padding-left: 30px;
+  }
+  .contactandlinks .footer-widget-heading2,.contactandlinks .footer-widget-heading{
+    display: block;
+    text-align: left;
+  }
+  .contactandlinks .footer-widget-heading2{
+    width:55%;
+  }
+  .contactandlinks .footer-widget-heading{
+    width: 40%;
+    margin-right: 10%;
+  }
+  .contactandlinks .footer-widget-heading li{
+    padding-bottom: 3px;
+    font-size: 80%;
+  }
+  .contactandlinks .footer-widget-heading2 li{
+    padding-bottom: 3px;
+    font-size: 80%;
+  }
+  #usefullinks,#contactlinks{
+    text-align: center;
+  }
+  .contactandlinks{
+    display: flex;
+  }
+  .footer-widget .footer-widget-heading3{
+    margin-top: 20px;
+  }
+  .footer-textt p{
+    font-size: 80% !important;
+  }
+}
+@media screen and (min-width:600px) and (max-width:900px) {
+  *{
+    margin: 0;
+    padding: 0;
+  }
+  .footer{
+    padding: 10px !important;
+  }
+  .footer-text{
+    font-size: 75% !important;
+    font-weight: 700;
+  }
+  .footer-social-icon span{
+    font-size: 100%;
+  }
+  #usefullinks {
+    font-size: 100% !important;
+    /* padding-left: 10px; */
+  }
+  #contactlinks{
+    font-size: 90%;
+  }
+  .footer-widget-heading2,.footer-widget-heading{
+    display: none;
+  }
+  .contactandlinks ul{
+    padding-left: 80px;
+  }
+  .contactandlinks .footer-widget-heading2,.contactandlinks .footer-widget-heading{
+    display: block;
+    text-align: left;
+  }
+  .contactandlinks .footer-widget-heading2{
+    width:100%;
+  }
+  .contactandlinks .footer-widget-heading{
+    width: 40%;
+    margin-right: 10%;
+  }
+  .contactandlinks .footer-widget-heading li{
+    padding-bottom: 3px;
+    /* font-size: %; */
+  }
+  .contactandlinks .footer-widget-heading ul{
+    margin-left: -80px !important;
+  }
+  .contactandlinks .footer-widget-heading2 ul{
+    margin-left: -50px !important;
+  }
+  .contactandlinks .footer-widget-heading2 li{
+    padding-bottom: 3px;
+    font-size: 90%;
+  }
+  #usefullinks,#contactlinks{
+    text-align: center;
+  }
+  .contactandlinks{
+    display: flex;
+  }
+  .footer-widget .footer-widget-heading3{
+    margin-top: 20px;
+  }
+  .footer-textt p{
+    font-size: 80% !important;
+  }
+}
+
