--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -7,7 +7,7 @@
   background-color: rgb(10,25,47); 
    /* width: 1540px; 
   height: 150vh;  */
-   margin-top: 50px; 
+   margin-top: -50px; 
    overflow: hidden;
 }
 .about-border {
@@ -234,6 +234,19 @@
   #ABOUT{
     overflow: visible;
   }
+  .ieee{
+    padding: 30px 30px;
+  }
+  .rsc{
+    padding: 40px 30px;
+  }
+  .must{
+    padding: 40px 30px;
+  }
+  .size{
+    font-size: 90%;
+    /* text-align: ; */
+  }
   .info{
     display: none;
   }
@@ -265,7 +278,11 @@
     color: rgb(118,130,158);;
   }
   .text_res{
-    font-size: 88%;
+    font-size: 75%;
+  }
+  .first{
+    font-size: 250%;
+    letter-spacing: 2px;
   }
 
 }
