--- a/src/components/event/events.css
+++ b/src/components/event/events.css
@@ -4,7 +4,13 @@
     color: rgb(89,227,197);
     margin-top: 120px;
 }
-
+.event-border {
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: rgb(204,214,246);
+  margin: 0 auto
+}
 .events{
     display: flex;
     flex-direction: row;
@@ -263,10 +269,14 @@
       opacity: 1;
     }
   }
-@media screen and (min-width:300px) and (max-width:500px){
+@media screen and (min-width:0px) and (max-width:500px){
   .events{
     display: block;
     /* width: 80%; */
+  }
+  .events_heading{
+    font-size: 250%;
+    letter-spacing: 2px;
   }
   .card{
     margin: 0 auto;
@@ -280,7 +290,7 @@
     margin-top:10px;
   }
   #EVENTS{
-    margin-top: -750px;
+    margin-top: -200%;
   }
 }
 @media screen and (min-width:500px) and (max-width:700px){
