--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -399,10 +399,9 @@ path{
     }
 
 }
-@media screen  and (min-width:300px) and (max-width:500px) {
+@media screen  and (min-width:0px) and (max-width:500px) {
     #ABOUT{
         width: 100%; 
-        height: 100vh;
         margin-top: -10px;
         margin-bottom: 900px;
     }
@@ -412,19 +411,29 @@ path{
     .main_head_mobile{
         display: block;
         text-align: center;
-        margin-left: 20%;
-        margin-right: 20%;
-        margin-top:5%;
+        margin: auto 0;
+        font-size: 80%;
+        padding: 70px;
+        margin-top: -1%;
     }
     #name_congress{
         color: rgb(89,227,197);
-        font-size: 1.8em;
+        letter-spacing: 2px;
+        font-size: 95%;
+        margin-bottom: 1%;
+    }
+    #ssn{
+        font-size: 95%;
+        margin-bottom: 1%;
     }
     #desc, #ssn{
         color: rgb(204,214,246);
     }
+    #desc{
+        font-size: 90%;
+    }
     #clockdivmobile{
-        margin-top: 20px;
+        margin-top: -1%;
         display: block;
         text-align: center;
     }
@@ -436,6 +445,9 @@ path{
         color: black;
         font-family: "Raleway";
     }
+    .smalltext{
+        font-size: 90% !important;
+    }
     #clockdivmobile > div {
         padding: 10px;
         /* border-radius: 3px; */
@@ -445,16 +457,17 @@ path{
         color: rgb(89,227,197);
         text-align: center;
         font-weight: 200;
+        margin-bottom: -20px;
     }
-    .btn-3 span {
+    /* .btn-3 span {
         position: relative;
         display: block;
         width: 100%;
         height: 100%;
-    }
+    } */
     .btn-3 {
         margin-top:10px;
-        background-color: rgb(89,227,197);
+        /* background-color: rgb(89,227,197); */
         line-height: 5px;
         padding: 0;
         border: none;
@@ -468,22 +481,22 @@ path{
         outline: none;
         color: rgb(58,54,55);
         padding: 5px;
-        letter-spacing: 1px;
+        letter-spacing: 2px;
         border: none;
-        font-size: 15px;
+        font-size: 90%;
         border-radius: 2px;
-        width: 80%;
-        height: 10%;
-        margin-right: 10%;
-        margin-left: 10%;
+        width: 18%;
+        margin-left: 39%;
         cursor: pointer;
-        font-weight: 500;
+        font-weight: 550;
+        margin-bottom: 15px;
     }
     #registermobile{
-        padding-left: 10px;
-        padding-right: 10px;
         font-size: 15px;
-        display: block;
+        display: flex;
+        flex-direction: column;
+        margin: auto 0;
         margin-top: 40px;
+        justify-content: center;
     }
 }
