--- a/src/components/team/team.css
+++ b/src/components/team/team.css
@@ -26,6 +26,7 @@
 .contactt{
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 .section-team {
 	/* padding: 80px 0; */
@@ -44,7 +45,9 @@
     margin-bottom: 50px;
     border-radius: 50%;
 }
-
+.single-person{
+  text-align: center;
+}
 .section-team .single-person:hover .person-image img {
 	padding: 16px;
     border: 2px dashed #fff;
@@ -75,7 +78,12 @@
 .section-team .single-person:hover .speciality {
 	color: #fff;
 }
-
+.person-info{
+  text-align: center;
+}
+.contactt{
+  text-align: center;
+}
 .reveal {
     position: relative;
     opacity: 0;
@@ -109,25 +117,33 @@
 
   @media screen  and (min-width:0px) and (max-width:650px) {
     .team_head{
-      font-size: 260%;
+      font-size: 250%;
+    }
+    .teams-border{
+      width: 40%;
+    }
+    .person-image{
+      text-align: center;
+      margin-top: -30px;
     }
     .row{
       flex-direction: column;
       justify-content: center;
     }
     .section-team .single-person {
-      margin-top: 30px;
-      /* padding: 30px; */
       border-radius: 5px;
-        width: 50%;
+        width: 48%;
         justify-content: center;
         margin: 0 auto !important;
     }
+    #sizee{
+      margin-top: 80px !important;
+    }
     .full-name{
-      font-size: 110% !important;
+      font-size: 90% !important;
     }
     .speciality{
-      font-size: 80% !important;
+      font-size: 65% !important;
     }
 }
 @media screen  and (min-width:650px) and (max-width:900px) {
